div spacing issues fixed

--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ main {
     min-height: 100vh;
 }
 
+div {
+    padding-bottom: 50px;
+}
+
 a:link,
 nav a:visited {
     text-decoration: none;
